# a2a_practice

./: .gitmodules  README.md  pyproject.toml
script/: README.md  simple_a2a_client.py  simple_a2a_server.py  task_polling_client.py  task_query_example.py
